1.15.0 - Added Dark Mode Fixer

--- a/styles.css
+++ b/styles.css
@@ -658,3 +658,11 @@ padding: 2px 0px !important;
 body.theme-light.act-light-mode-fix .always-color-text-highlight {
   filter: brightness(0.7);
 }
+
+body.theme-dark.act-dark-mode-fix .always-color-text-highlight {
+  filter: brightness(1.3);
+}
+
+body.theme-dark.act-dark-mode-fix .always-color-text-highlight.act-dark-color {
+  filter: brightness(3.0);
+}
